--- a/HTML5/responsive/.htaccess
+++ b/HTML5/responsive/.htaccess
@@ -1,1 +1,5 @@
+# Отключение назначение сервером кодировки по умолчанию
 AddDefaultCharset Off
+
+# Запрещение просмотра содержимого каталогов
+Options -Indexes
