--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,5 +1,26 @@
-# Отключение назначение сервером кодировки по умолчанию
+## Отключение назначение сервером кодировки по умолчанию
 AddDefaultCharset Off
 
-# Запрещение просмотра содержимого каталогов
-Options -Indexes
+## Запрещение просмотра содержимого каталогов
+Options All -Indexes
+
+## Включает работу механизма преобразования
+RewriteEngine On
+
+## Устанавливает базовый URL для преобразований
+RewriteBase /
+
+## Перенаправление на основной адрес страницы, если адрес запрашиваемой страницы начинается с "www" (без учета регистра)
+RewriteCond %{HTTP_HOST} ^www\.(.*) [NC]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+
+## Перенаправление на основной адрес страницы, если адрес запрашиваемой страницы заканчивается на "index.(html|php)"
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} -f
+RewriteRule ^(.*)/index\.(html|php)$ /$1 [R=301,L]
+
+## Назначение собственных шаблонов страниц ошибок
+ErrorDocument 401 /error/401.php
+ErrorDocument 403 /error/403.php
+ErrorDocument 404 /error/404.php
+ErrorDocument 500 /error/500.php
